adapted command line execution test